--- a/index.html
+++ b/index.html
@@ -27,37 +27,40 @@
 </div>
 
 <div id="big_viking_logo">
-  <img src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/viking_ship_background_medium.jpg"
+  <img src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/viking_ship_background_medium.jpg">
 </div>
 
-<div>
-  Best viking gear
+<div id="best">
+  <p>The Best Viking Gear on the Whole Interwebs</p>
 </div>
 
-<div>
-  Choose from among our lineup of fine exes below
+<div id="choose">
+  <p>Choose from among our lineup of fine axes below</p>
 </div>
 
-<div>
-  Pic container
-  <div>
-    pic1
-  </div>
-  <div>
-    pic2
-  </div>
-  <div>
-    pic3
-  </div>
-  <div>
-    pic4
-  </div>
-  <div>
-    pic5
-  </div>
-  <div>
-    pic6
-  </div>
+<div id="inv_container">
+  <table>
+    <tr class="table_headers">
+      <th>The Silent Night</th>
+      <th>The Dainty Daisy</th>
+      <th>Double Trouble</th>
+    </tr>
+    <tr class="rows">
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_silent_night_small.jpg"></p></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_dainty_daisy_small.jpg"></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_double_trouble_small.jpg"></td>
+    </tr>
+    <tr class="table_headers">
+      <th>Whispering Wind</th>
+      <th>The Cunning Cutter</th>
+      <th>The Kingmaker</th>
+    </tr>
+    <tr>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_whispering_wind_small.jpg"></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_cunning_cutter_small.jpg"></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_kingmaker_small.jpg"></td>
+    </tr>
+  </table>
 </div>
 
 <div>
