--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <div id="inv_container">
-  <table>
+  <table id="inv_table">
     <tr class="table_headers">
       <th>The Silent Night</th>
       <th>The Dainty Daisy</th>
@@ -55,7 +55,7 @@
       <th>The Cunning Cutter</th>
       <th>The Kingmaker</th>
     </tr>
-    <tr>
+    <tr class="rows">
       <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_whispering_wind_small.jpg"></td>
       <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_cunning_cutter_small.jpg"></td>
       <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_kingmaker_small.jpg"></td>
