Table mostly done

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   </div>
   <div id="right-side-container">
     <div id="cart">
-      Your Cart <img src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/icon_empty_cart.png">
+      Your Cart <a href=""><img src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/icon_empty_cart.png"></a>
     </div>
     <div id="mail">
-      <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/563007-84.png">
+      <a href=""><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/563007-84.png"></a>
     </div>
   </div>
 </div>
@@ -46,19 +46,20 @@
       <th>Double Trouble</th>
     </tr>
     <tr class="rows">
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_silent_night_small.jpg"></p></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_dainty_daisy_small.jpg"></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_double_trouble_small.jpg"></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_silent_night_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_dainty_daisy_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_double_trouble_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
     </tr>
+    <tr id="spacer"></tr>
     <tr class="table_headers">
       <th>Whispering Wind</th>
       <th>The Cunning Cutter</th>
       <th>The Kingmaker</th>
     </tr>
     <tr class="rows">
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_whispering_wind_small.jpg"></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_cunning_cutter_small.jpg"></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_kingmaker_small.jpg"></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_whispering_wind_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_cunning_cutter_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
+      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_kingmaker_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
     </tr>
   </table>
 </div>
