--- a/index.html
+++ b/index.html
@@ -46,9 +46,35 @@
       <th>Double Trouble</th>
     </tr>
     <tr class="rows">
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_silent_night_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_dainty_daisy_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_double_trouble_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
+      <td>
+        <div class="price">$200</div>
+        <img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_silent_night_small.jpg">
+        <div id="add_cart_container">
+          <div id="add_cart_button">
+            <a href="">Add to Cart</a>
+          </div>
+        </div>
+      </td>
+      <td>
+        <div class="price">$100</div>
+        <img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_dainty_daisy_small.jpg">
+        <div id="add_cart_container">
+          <div id="add_cart_button">
+            <a href="">Add to Cart</a>
+          </div>
+        </div>
+      </td>
+    </td>
+      <td>
+        <div class="price">$340</div>
+        <img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_double_trouble_small.jpg">
+        <div id="add_cart_container">
+          <div id="add_cart_button">
+            <a href="">Add to Cart</a>
+          </div>
+        </div>
+      </td>
+    </td>
     </tr>
     <tr id="spacer"></tr>
     <tr class="table_headers">
@@ -57,20 +83,59 @@
       <th>The Kingmaker</th>
     </tr>
     <tr class="rows">
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_whispering_wind_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_cunning_cutter_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
-      <td><img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_kingmaker_small.jpg"><div id="add_cart_container"><div id="add_cart_button"><a href="">Add to Cart</a></div></div></td></td>
+      <td>
+        <div class="price">$225</div>
+        <img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_whispering_wind_small.jpg">
+        <div id="add_cart_container">
+          <div id="add_cart_button">
+            <a href="">Add to Cart</a>
+          </div>
+        </div>
+      </td>
+    </td>
+      <td>
+        <div class="price">$200</div>
+        <img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_cunning_cutter_small.jpg">
+        <div id="add_cart_container">
+          <div id="add_cart_button">
+            <a href="">Add to Cart</a>
+          </div>
+        </div>
+      </td>
+    </td>
+      <td>
+        <div class="price">$400</div>
+        <img class="inv_img" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/axe_kingmaker_small.jpg">
+        <div id="add_cart_container">
+          <div id="add_cart_button">
+            <a href="">Add to Cart</a>
+          </div>
+        </div>
+      </td>
+    </td>
     </tr>
   </table>
+  <div id="inv_navigator">
+    <a href=""><< Prev</a>
+    <a href=""> 1 </a>
+    <a href=""> 2 </a>
+    <a href=""> 3 </a>
+    <a href=""> ... </a>
+    <a href=""> 8 </a>
+    <a href=""> 9 </a>
+    <a href=""> Next >></a>
+  </div>
 </div>
 
-<div>
-  picture nav
+<div id="contact_info">
+  <p>CONTACT</p>
+  <img class="footer_icons" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/icon_phone_white.png">
+  1-000-0000
+</br>
+  <a href="">
+    <img class="footer_icons" src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/email_white.png">
+  </a>
+  contact@vikingstore.com
 </div>
-
-<div>
-  contact info
-</div>
-
 </body>
 </html>
